release: add 3.0.0.8 note and merge RELEASE_NOTES.md into RELEASE.md
- Add the Seahorse 3.0.0.8 release note: the platform modernization off the EOL
  Spark 3.0.0 / Scala 2.12 / JDK 8 / Python 3.7 baseline onto Spark 3.4.4 /
  Scala 2.13.12 / JDK 17 / Pekko / Python 3.12 / Jupyter Server 2 / webpack-2
  frontend, with the Docker image set rebuilt and the full compose stack verified.
- Consolidate the two release files into a single RELEASE.md: fold the 3.0.0.3
  note from RELEASE_NOTES.md into RELEASE.md in newest-first order (3.0.0.8,
  3.0.0.7, 3.0.0.6, 3.0.0.3) and delete RELEASE_NOTES.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>